@@ -1,5 +1,11 @@
 2015-03-04  Marcus Shawcroft  <marcus.shawcroft@arm.com>
 
+	* elfnn-aarch64.c (erratum_835769_scan) Add comment.  Reverse
+	sense of boolean return.
+	(elfNN_aarch64_size_stubs): Adjust for above.
+
+2015-03-23  Marcus Shawcroft  <marcus.shawcroft@arm.com>
+
 	* elfnn-aarch64.c (elf_aarch64_create_or_find_stub_sec):
 	Remove unused parameter.
 	(elfNN_aarch64_size_stubs): Adjust for above.
